# visualization.vsxu

./: CMakeLists.txt  FindVSXu.cmake
debian/: changelog.in  control  copyright  rules
depends/common/glfw/: CMakeLists.txt  glfw.txt
depends/common/vsxu/: 02-use-pkgconfig-for-glfw.patch  03-glfw-include-path.patch  flags.txt  vsxu.txt
src/: addon.cpp
visualization.vsxu/: addon.xml  addon.xml.in
